# discogs-rs

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
examples/: marketplace_listing_request.rs  oauth_flow.rs  search.rs
src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  oauth.rs
src/endpoints/: collection.rs  database.rs  inventory.rs  marketplace.rs  mod.rs  user.rs  user_list.rs  wantlist.rs
tests/: http_client_behavior.rs  serde_roundtrip_models.rs
