[package]
name = "discogs-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Async Rust client library for the Discogs API v2"
repository = "https://github.com/your-org/discogs-rs"
readme = "README.md"
keywords = ["discogs", "api", "music", "marketplace"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
bytes = "1.10"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["time"] }
url = "2.5"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
